<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:text="@string/pname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pn1textview"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="###"
            android:textColor="#FF0000"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/pn1editText" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
    <TextView
        android:text="@string/pname2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pn2textView"
        android:layout_marginTop="10dp"
        />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#0000FF"
             android:text="###"
             android:textColor="#0000FF"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
             />
     </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/pn2editText" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startbutton"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />


</LinearLayout>