<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player Information"
        android:layout_gravity="center"
        android:textColor="#000000"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name Here"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/nametv" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Color:"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Color Here"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/colortv" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location Here"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/loctv" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Money:"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Money Here"
            android:textColor="#000000"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/moneytv" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player Options"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        android:id="@+id/rolldicebuttonp"
        android:layout_marginTop="10dp"
        android:text="@string/rolldice" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        android:id="@+id/printboardbuttonp"
        android:text="@string/printboard" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@android:style/Widget.Button"
        android:id="@+id/endGamebuttonp"
        android:text="@string/endgame" />

</LinearLayout>